# multi_rag_agent

./: .gitignore  Dockerfile  README.md  checkpoints.db  docker-compose.yml  multi_rag-agent_api_key.txt  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  ingest_structured.yml  ingest_unstructured.yml
agent/: readme.md
agent/app/: graph.py  main.py
agent/app/api/: main.py
agent/app/core/: repository.py  settings.py  state.py
agent/app/services/: utils.py
archi/: 1_HIGH_LEVEL_DIAGRAM.mermaid  2_LOW_LEVEL_DATA_PIPELINE.mermaid  3_LOW_LEVEL_AGENT_CORE.mermaid  4_LOW_LEVEL_RUNTIME_SEQUENCE.mermaid  5_LOW_LEVEL_BACKEND_FRONTEND.mermaid  ARCHITECTURE_DIAGRAMS.md
backend/: main.py
data_setup/: main.py
data_setup/config/: datasets_str.json  datasets_unstr.json
data_setup/ingestion/: fetch_str.py  fetch_unstr.py
data_setup/unified_layer/: database.py  engine.py  freshness.py  models.py
data_setup/unified_layer/transformers/: __init__.py  apod.py  base.py  donki.py  eonet.py  html_docs.py  neows.py  spaceflight.py
data_setup/vector_layer/: builder.py
docs/: Production_Deployment_Mental_Model_Guide.docx  README.md  doc.md  docker.txt  flow.md  poetry.md  prod.txt  repo_gaps_multi-agent-rag-customer-support (2).txt
frontend/: .gitignore
frontend/src/app/: globals.css  layout.tsx  (+1 more)
scripts/: check_freshness.py  graph_d.py  run_ingestion_pipeline.py  settings.py  smoke_test_agents.py  test_repository.py  test_search.py  test_tools_assistant.py  test_unified_layer.py  test_upstash_redis.py
vectorizer/: readme.md
vectorizer/app/: main.py
(+45 files in other folders)
