[project]
name = "gen_ai"
version = "0.1.0"
description = "Multi-Agent RAG System"
authors = [
    { name = "chandraPrakash-tripathi", email = "tripathi.cp07@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "langgraph>=0.2.19",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.1.23",
    "ipython>=8.27.0",
    "langchain-community>=0.2.16",
    "langchain-google-community>=1.0.8",
    "qdrant-client>=1.11.1",
    "pandas>=2.2.2",
    "aiohttp>=3.10.5",
    "tqdm>=4.66.5",
    "more-itertools>=10.5.0",
    "google-genai (>=2.10.0,<3.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "langchain-groq (>=1.1.3,<2.0.0)",
    "langsmith (>=0.10.1,<0.11.0)",
    "ddgs (>=9.14.4,<10.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "streamlit (>=1.59.1,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "slowapi (>=0.1.10,<0.2.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"